--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0.145", features = [ "derive" ] }
 bcrypt = "0.13.0"
 nanoid = "0.4.0"
 lettre = { version = "0.10.1", features = [ "tokio1-native-tls", "tokio1", "sendmail-transport", "serde" ] }
+anyhow = "1.0.51"
