--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ authors = [ "Marcin Mikuła <marcinmikula840@gmail.com>", "Piotr Jakóbczyk", "P
 
 [dependencies]
 rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
-rocket_db_pools = { version = "0.1.0-rc.2", features = [ "sqlx_mysql" ] }
+rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_mysql", "sqlx_macros"] }
 serde = { version = "1.0.145", features = [ "derive" ] }
 bcrypt = "0.13.0"
 nanoid = "0.4.0"
