--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,5 @@ lettre = { version = "0.10.1", features = [ "tokio1-native-tls", "tokio1", "send
 anyhow = "1.0.51"
 rand = "0.8.5"
 validator = { version = "0.16.0", features = ["derive"] }
-
-
+serde_json = "1.0.86"
 
