--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ authors = [ "Marcin Mikuła <marcinmikula840@gmail.com>", "Piotr Jakóbczyk", "P
 
 [dependencies]
 rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
-rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_mysql", "sqlx_macros"] }
 serde = { version = "1.0.145", features = [ "derive" ] }
 bcrypt = "0.13.0"
 nanoid = "0.4.0"
@@ -19,3 +18,5 @@ anyhow = "1.0.51"
 rand = "0.8.5"
 validator = { version = "0.16.0", features = ["derive"] }
 serde_json = "1.0.86"
+sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
+dotenv = "0.15.0"
