--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ anyhow = "1.0.51"
 rand = "0.8.5"
 validator = { version = "0.16.0", features = ["derive"] }
 serde_json = "1.0.86"
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "macros"] }
 dotenv = "0.15.0"
