--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ anyhow = "1.0.51"
 rand = "0.8.5"
 validator = { version = "0.16.0", features = ["derive"] }
 serde_json = "1.0.86"
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "macros"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"] }
 dotenv = "0.15.0"
+chrono = { version = "0.4.22", features = ["serde"] }
