--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ nanoid = "0.4.0"
 lettre = { version = "0.10.1", features = [ "tokio1-native-tls", "tokio1", "sendmail-transport", "serde" ] }
 anyhow = "1.0.51"
 validator = { version = "0.16.0", features = ["derive"] }
-serde_json = "1.0.86"
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"] }
+serde_json = {version = "1.0.86", features = ["raw_value"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "json"] }
 dotenv = "0.15.0"
 chrono = { version = "0.4.22", features = ["serde"] }
